// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventListItem Renders correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/img/red_warning.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 8,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#666666",
            },
          ]
        }
      >
        00:00:00.000
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#D94553",
            },
          ]
        }
      >
        test-name
      </Text>
    </View>
    <Image
      source={
        {
          "testUri": "../../../src/img/expend_arrow.png",
        }
      }
      style={
        {
          "height": 6,
          "margin": 19,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
</View>
`;

exports[`EventListItem Renders correctly when expanded 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "height": 52,
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        {
          "testUri": "../../../src/img/red_warning.png",
        }
      }
      style={
        {
          "height": 16,
          "margin": 16,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontSize": 8,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#666666",
            },
          ]
        }
      >
        00:00:00.000
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
              "textAlignVertical": "center",
            },
            {
              "color": "#D94553",
            },
          ]
        }
      >
        test-name
      </Text>
    </View>
    <Image
      source={
        {
          "testUri": "../../../src/img/collapse_arrow.png",
        }
      }
      style={
        {
          "height": 6,
          "margin": 19,
          "width": 10,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignSelf": "stretch",
        "marginEnd": 16,
        "marginStart": 16,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "bold",
              },
              {
                "color": "#D94553",
              },
            ]
          }
        >
          prop 0 name
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 12,
              },
              {
                "color": "#D94553",
              },
            ]
          }
        >
          val 0
        </Text>
      </View>
      <Text
        style={
          {
            "color": "#D94553",
            "fontSize": 10,
            "marginBottom": 16,
          }
        }
      >
        error in prop 0 with id0
      </Text>
    </View>
    <View
      style={
        {
          "alignSelf": "stretch",
          "backgroundColor": "#E3E3E3",
          "height": 1,
        }
      }
    />
    <View
      style={
        {
          "flexDirection": "column",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 32,
            "justifyContent": "space-between",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 12,
                "fontWeight": "bold",
              },
              {
                "color": "#333333",
              },
            ]
          }
        >
          prop 1 name
        </Text>
        <Text
          style={
            [
              {
                "fontSize": 12,
              },
              {
                "color": "#333333",
              },
            ]
          }
        >
          val 1
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "alignSelf": "stretch",
        "backgroundColor": "#E3E3E3",
        "height": 1,
      }
    }
  />
</View>
`;
